--- a/Cadastro/package.json
+++ b/Cadastro/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "node2",
+  "name": "cadastro",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
-    "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "request": "^2.87.0"
+    "password-hash": "^1.2.2"
   }
 }
